--- a/found.html
+++ b/found.html
@@ -28,11 +28,15 @@
     <!-- Item Dashboard -->
     <h2>Dashboard</h2>
     <div class="container">
-        <div class="found"> 
-            <!-- Items will be added here dynamically -->
+
+     
+        <!-- ✅ FIX: Added missing 'found-items-container' -->
+        <div id="found-items-container" class="found">
+            <!-- Items will be dynamically loaded here -->
         </div>
     </div>
 
     <script src="found.js"></script>
 </body>
 </html>
+
