--- a/lost.html
+++ b/lost.html
@@ -25,11 +25,13 @@
         </div>
     </div>
 
-    <!-- Item Dashboard -->
     <h2>Dashboard</h2>
     <div class="container">
-        <div class="lost"> 
-            <!-- Items will be added here dynamically -->
+
+     
+        <!-- ✅ FIX: Added missing 'found-items-container' -->
+        <div id="found-items-container" class="found">
+            <!-- Items will be dynamically loaded here -->
         </div>
     </div>
 
